New "--current" option to set default profile.
Set version to 1.1

--- a/xaictl.1
+++ b/xaictl.1
@@ -1,4 +1,4 @@
-.TH "xaictl" "1" "September 6, 2010" "GPL" "Xai mouse configuration tool"
+.TH "xaictl" "1" "October 2, 2010" "GPL" "Xai mouse configuration tool"
 .SH "NAME"
 xaictl \- Command-line configuration tool for SteelSeries XAI Mouse
 
@@ -73,6 +73,9 @@ Set button 8 mapping (default: wheelup).
 .TP
 .BI "   " " " --b9 "=ROLE"
 Set button 9 mapping (default: wheeldown).
+.TP
+.B "   " --current
+Set specified profile the current one.
 
 .SS General options
 .TP
