--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xaictl (1.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Matthieu Crapet <mcrapet@gmail.com>  Sat, 02 Oct 2010 12:35:20 +0200
+
 xaictl (1.0-1) unstable; urgency=low
 
   * Initial release
