New "--name" option to modify profile name
Set version to 1.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xaictl (1.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Matthieu Crapet <mcrapet@gmail.com>  Sun, 03 Oct 2010 11:37:02 +0200
+
 xaictl (1.1-1) unstable; urgency=low
 
   * New upstream release.
