--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xaictl (2.0-1) unstable; urgency=low
+
+  * New upstream release (now using libusb-1.0 API)
+
+ -- Matthieu Crapet <mcrapet@gmail.com>  Wed, 06 Oct 2010 19:42:27 +0200
+
 xaictl (1.2-1) unstable; urgency=low
 
   * New upstream release.
