--- a/xaictl.1
+++ b/xaictl.1
@@ -97,7 +97,7 @@ Output version information and exit.
 .SH NOTES
 
 .SS 1) Unbind HID interface
-usbhid kernel driver will lock all 3 interfaces of XAI mouse. Interface n°2 is used for configuration only; so it is not required by usbhid driver.
+usbhid kernel driver will lock all 3 interfaces of XAI mouse. Interface 2 is used for configuration only; so it is not required by usbhid driver.
 .B xaictl 
 will try to unbind the interface for you (you'll need root permissions).
 
